--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openbootcamp-excercices",
+  "name": "openbootcamp-exercices",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
